--- a/Skeleton/Api/Application/Command/Handler/Decorator/UpdateCommandHandlerDecorator.php.twig
+++ b/Skeleton/Api/Application/Command/Handler/Decorator/UpdateCommandHandlerDecorator.php.twig
@@ -7,7 +7,7 @@ namespace {{ projectName }}\Application\{{ entityName }}\Command\Handler\Decorat
  *
  * @category   {{ projectName }}
  * @package    Application
- * @subpackage Command
+ * @subpackage Command\Handler\Decorator
  */
 class UpdateCommandHandlerDecorator extends NewCommandHandlerDecorator
 {
