--- a/Skeleton/Api/Application/Command/Handler/DeleteCommandHandler.php.twig
+++ b/Skeleton/Api/Application/Command/Handler/DeleteCommandHandler.php.twig
@@ -9,7 +9,7 @@ use Sfynx\DddBundle\Layer\Application\Generalisation\Command\Handler\AbstractDel
  *
  * @category   {{ projectName }}
  * @package    Application
- * @subpackage Command
+ * @subpackage Command\Handler
  */
 class DeleteCommandHandler extends AbstractDeleteCommandHandler
 {
