--- a/Skeleton/Api/Application/Command/Handler/Validation/SpecHandler/UpdateCommandSpecHandler.php.twig
+++ b/Skeleton/Api/Application/Command/Handler/Validation/SpecHandler/UpdateCommandSpecHandler.php.twig
@@ -10,7 +10,7 @@ use Sfynx\SpecificationBundle\Specification\Logical\TrueSpec;
  *
  * @category   {{ projectName }}
  * @package    Application
- * @subpackage Command
+ * @subpackage Command\Handler\Validation\SpecHandler
  */
 class UpdateCommandSpecHandler extends AbstractCommandSpecHandler
 {
