--- a/Skeleton/Api/Application/Query/GetAllQuery.php.twig
+++ b/Skeleton/Api/Application/Query/GetAllQuery.php.twig
@@ -5,7 +5,7 @@ namespace {{ projectName }}\Application\{{ entityName }}\Query;
 use Sfynx\DddBundle\Layer\Application\Generalisation\Query\AbstractAllQuery;
 
 /**
- * Class AllQuery.
+ * Class GetAllQuery.
  *
  * @category   {{ projectName }}
  * @package    Application
@@ -14,4 +14,3 @@ use Sfynx\DddBundle\Layer\Application\Generalisation\Query\AbstractAllQuery;
 class GetAllQuery extends AbstractAllQuery
 {
 }
-
