--- a/Skeleton/Api/Application/Query/GetByIdsQuery.php.twig
+++ b/Skeleton/Api/Application/Query/GetByIdsQuery.php.twig
@@ -7,7 +7,7 @@ use Sfynx\DddBundle\Layer\Application\Generalisation\Query\AbstractGetByIdsQuery
 /**
  * Class GetByIdsQuery.
  *
- * @category   DemoApiContext
+ * @category   {{ projectName }}
  * @package    Application
  * @subpackage Query
  */
