--- a/Skeleton/Api/Application/Query/Handler/GetQueryHandler.php.twig
+++ b/Skeleton/Api/Application/Query/Handler/GetQueryHandler.php.twig
@@ -5,7 +5,7 @@ namespace {{ projectName }}\Application\{{ entityName }}\Query\Handler;
 use Sfynx\DddBundle\Layer\Application\Generalisation\Query\Handler\AbstractOneQueryHandler;
 
 /**
- * Class GetByIdsQueryHandler.
+ * Class GetQueryHandler.
  *
  * @category   {{ projectName }}
  * @package    Application
