--- a/Skeleton/Api/Domain/Repository/EntityRepositoryInterface.php.twig
+++ b/Skeleton/Api/Domain/Repository/EntityRepositoryInterface.php.twig
@@ -3,11 +3,11 @@
 namespace {{ projectName }}\Domain\Repository;
 
 /**
- * {{ entityName }} Repository interface
+ * {{ entityName }} Repository interface.
  *
  * @category   {{ projectName }}
- * @package    Repository
- * @subpackage Interface
+ * @package    Domain
+ * @subpackage Repository
  */
 interface {{ entityName }}RepositoryInterface
 {
