--- a/Skeleton/Api/Domain/Workflow/Handler/PatchWFHandler.php.twig
+++ b/Skeleton/Api/Domain/Workflow/Handler/PatchWFHandler.php.twig
@@ -5,8 +5,11 @@ namespace {{ projectName }}\Domain\Workflow\{{ entityName }}\Handler;
 use Sfynx\DddBundle\Layer\Domain\Workflow\Generalisation\AbstractWFHandler;
 
 /**
- * Class PatchWFHandler
- * @package {{ projectName }}\Domain\Workflow\{{ entityName }}\Handler
+ * Class PatchWFHandler.
+ *
+ * @category {{ projectName }}
+ * @package Domain
+ * @subpackage Workflow\Handler
  */
 class PatchWFHandler extends AbstractWFHandler
 {
