--- a/Skeleton/Api/Presentation/Adapter/DeleteManyCommandAdapter.php.twig
+++ b/Skeleton/Api/Presentation/Adapter/DeleteManyCommandAdapter.php.twig
@@ -4,18 +4,17 @@ namespace {{ projectName }}\Presentation\Adapter\{{ entityName }}\Command;
 
 use Sfynx\DddBundle\Layer\Presentation\Adapter\Generalisation\AbstractDeleteManyCommandAdapter;
 use Sfynx\DddBundle\Layer\Presentation\Adapter\Generalisation\CommandAdapterInterface;
+use {{ projectName }}\Application\{{ entityName }}\Command\DeleteManyCommand;
 
 /**
  * Class DeleteManyCommandAdapter.
  *
  * @category   {{ projectName }}
  * @package    Presentation
- * @subpackage Adapter
+ * @subpackage Adapter\Command
  */
 class DeleteManyCommandAdapter extends AbstractDeleteManyCommandAdapter implements CommandAdapterInterface
 {
-    /**
-     * @var string $commandNamespace full namespace of DeleteManyCommand
-     */
-    protected $commandNamespace = \{{ projectName }}\Application\{{ entityName }}\Command\DeleteManyCommand::class;
+    /** @var string $commandNamespace full namespace of DeleteManyCommand */
+    protected $commandNamespace = DeleteManyCommand::class;
 }
