--- a/Skeleton/Api/Presentation/Adapter/PatchCommandAdapter.php.twig
+++ b/Skeleton/Api/Presentation/Adapter/PatchCommandAdapter.php.twig
@@ -11,7 +11,7 @@ use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\CommandRequestInte
  *
  * @category   {{ projectName }}
  * @package    Presentation
- * @subpackage Adapter
+ * @subpackage Adapter\Command
  */
 class PatchCommandAdapter implements CommandAdapterInterface
 {
