--- a/Skeleton/Api/Presentation/Request/GetAllRequest.php.twig
+++ b/Skeleton/Api/Presentation/Request/GetAllRequest.php.twig
@@ -6,7 +6,7 @@ use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\QueryRequestInterf
 use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\AbstractAllRequest;
 
 /**
- * Class AllRequest.
+ * Class GetAllRequest.
  *
  * @category   {{ projectName }}
  * @package    Presentation
