--- a/Skeleton/Api/Presentation/Request/SearchByRequest.php.twig
+++ b/Skeleton/Api/Presentation/Request/SearchByRequest.php.twig
@@ -6,7 +6,7 @@ use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\QueryRequestInterf
 use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\AbstractRequest;
 
 /**
- * Class NewRequest.
+ * Class SearchByRequest.
  *
  * @category   {{ projectName }}
  * @package    Presentation
