--- a/Skeleton/Api/Presentation/Coordination/Controller.php.twig
+++ b/Skeleton/Api/Presentation/Coordination/Controller.php.twig
@@ -2,53 +2,53 @@
 
 namespace {{ projectName }}\Presentation\Coordination\{{ entityName }}\{{ group }};
 
-use Symfony\Component\HttpFoundation\JsonResponse;
+use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\Resolver\ResolverInterface;
+use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\Request\RequestInterface;
+use Sfynx\DddBundle\Layer\Presentation\Response\Generalisation\ResponseHandlerInterface;
 use Symfony\Component\HttpFoundation\Response;
 {% if group == "Query" %}
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\QueryHandlerInterface;
 use {{ projectName }}\Presentation\Adapter\{{ entityName }}\Query\GetAllQueryAdapter;
 use {{ projectName }}\Presentation\Adapter\{{ entityName }}\Query\GetQueryAdapter;
-use {{ projectName }}\Presentation\Adapter\{{ entityName }}\Query\GetByIdsQueryAdapter;
-use {{ projectName }}\Presentation\Adapter\{{ entityName }}\Query\SearchByQueryAdapter;
 use {{ projectName }}\Presentation\Request\{{ entityName }}\Query\GetAllRequest;
-use {{ projectName }}\Presentation\Request\{{ entityName }}\Query\GetByIdsRequest;
 use {{ projectName }}\Presentation\Request\{{ entityName }}\Query\GetRequest;
-use {{ projectName }}\Presentation\Request\{{ entityName }}\Query\SearchByRequest;
-
+use {{ projectName }}\Application\{{ entityName }}\Query\Handler\GetAllQueryHandler;
+use {{ projectName }}\Application\{{ entityName }}\Query\Handler\GetByIdsQueryHandler;
+use {{ projectName }}\Application\{{ entityName }}\Query\Handler\GetQueryHandler;
 {% else %}
 use Sfynx\DddBundle\Layer\Application\Generalisation\Interfaces\CommandHandlerInterface;
-use {{ projectName }}\Presentation\Adapter\{{ entityName }}\Command\DeleteCommandAdapter;
-use {{ projectName }}\Presentation\Adapter\{{ entityName }}\Command\DeleteManyCommandAdapter;
 use {{ projectName }}\Presentation\Adapter\{{ entityName }}\Command\UpdateCommandAdapter;
-use {{ projectName }}\Presentation\Adapter\{{ entityName }}\Command\PatchCommandAdapter;
 use {{ projectName }}\Presentation\Adapter\{{ entityName }}\Command\NewCommandAdapter;
-use {{ projectName }}\Presentation\Request\{{ entityName }}\Command\DeleteRequest;
-use {{ projectName }}\Presentation\Request\{{ entityName }}\Command\DeleteManyRequest;
 use {{ projectName }}\Presentation\Request\{{ entityName }}\Command\UpdateRequest;
-use {{ projectName }}\Presentation\Request\{{ entityName }}\Command\PatchRequest;
 use {{ projectName }}\Presentation\Request\{{ entityName }}\Command\NewRequest;
-
+use {{ projectName }}\Application\{{ entityName }}\Command\Handler\DeleteCommandHandler;
+use {{ projectName }}\Application\{{ entityName }}\Command\Handler\DeleteManyCommandHandler;
+use {{ projectName }}\Application\{{ entityName }}\Command\Handler\NewCommandHandlerDecorator;
+use {{ projectName }}\Application\{{ entityName }}\Command\Handler\UpdateCommandHandlerDecorator;
+use {{ projectName }}\Application\{{ entityName }}\Command\Handler\PatchCommandHandlerDecorator;
 {% endif %}
-use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\Resolver\ResolverInterface;
-use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\Request\RequestInterface;
-use Sfynx\DddBundle\Layer\Presentation\Response\Generalisation\ResponseHandlerInterface;
 
 /**
- * @category Presentation
- * @package  Coordination
+ * @category   {{ projectName }}
+ * @package    Presentation
+ * @subpackage Coordination\{{ group }}
  */
 class Controller
 {
 {% if group == "Command" %}
-    /** @var \{{ projectName }}\Application\{{ entityName }}\Command\Handler\DeleteCommandHandler */
+    /** @var DeleteCommandHandler */
     protected $deleteCommandHandler;
-    /** @var \{{ projectName }}\Application\{{ entityName }}\Command\Handler\DeleteManyCommandHandler */
+
+    /** @var DeleteManyCommandHandler */
     protected $deleteManyCommandHandler;
-    /** @var \{{ projectName }}\Application\{{ entityName }}\Command\Handler\Decorator\NewCommandHandlerDecorator */
+
+    /** @var NewCommandHandlerDecorator */
     protected $newCommandHandlerDecorator;
-    /** @var \{{ projectName }}\Application\{{ entityName }}\Command\Handler\Decorator\UpdateCommandHandlerDecorator */
+
+    /** @var UpdateCommandHandlerDecorator */
     protected $updateCommandHandlerDecorator;
-    /** @var \{{ projectName }}\Application\{{ entityName }}\Command\Handler\Decorator\PatchCommandHandlerDecorator */
+
+    /** @var PatchCommandHandlerDecorator */
     protected $patchCommandHandlerDecorator;
 
     /**
@@ -86,15 +86,20 @@ class Controller
 {% elseif group == "Query" %}
     /** @var RequestInterface */
     protected $request;
+
     /** @var ResolverInterface */
     protected $resolver;
+
     /** @var ResponseHandlerInterface */
     protected $responseHandler;
-    /** @var \{{ projectName }}\Application\{{ entityName }}\Query\Handler\GetAllQueryHandler */
+
+    /** @var GetAllQueryHandler */
     protected $getAllQueryHandler;
-    /** @var \{ projectName }}\Application\{{ entityName }}\Query\Handler\GetByIdsQueryHandler */
+
+    /** @var GetByIdsQueryHandler */
     protected $getByIdsQueryHandler;
-    /** @var \{ projectName }}\Application\{{ entityName }}\Query\Handler\GetQueryHandler */
+
+    /** @var GetQueryHandler */
     protected $getQueryHandler;
 
     /**
