--- a/Skeleton/Api/Presentation/Coordination/actions/getSwaggerFile.php.twig
+++ b/Skeleton/Api/Presentation/Coordination/actions/getSwaggerFile.php.twig
@@ -1,7 +1,8 @@
     /**
-    * @return Response
-    */
-    public function getSwaggerFile($_format)
+     * @param string $format
+     * @return Response
+     */
+    public function getSwaggerFile($format)
     {
-        return new Response(file_get_contents(__DIR__."../../../../../Config/swagger/swagger.$_format"));
+        return new Response(file_get_contents(__DIR__ . '../../../../../Config/swagger/swagger.' . $format));
     }
