--- a/Skeleton/Api/Presentation/Coordination/actions/patch.php.twig
+++ b/Skeleton/Api/Presentation/Coordination/actions/patch.php.twig
@@ -5,7 +5,8 @@
      * <code>
      * </code>
      */
-    public function {{ action.action }}Action() {
+    public function {{ action.action }}Action()
+    {
         $adapter = new PatchCommandAdapter();
         $command = $adapter->createCommandFromRequest(new PatchRequest($this->request, $this->resolver));
         if ($entity = $this->patchCommandHandlerDecorator->process($command)) {
