--- a/Skeleton/Api/Presentation/Request/GetRequest.php.twig
+++ b/Skeleton/Api/Presentation/Request/GetRequest.php.twig
@@ -6,7 +6,7 @@ use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\QueryRequestInterf
 use Sfynx\DddBundle\Layer\Presentation\Request\Generalisation\AbstractOneRequest;
 
 /**
- * Class OneRequest.
+ * Class GetRequest.
  *
  * @category   {{ projectName }}
  * @package    Presentation
