--- a/Skeleton/Api/PresentationBundle/DependencyInjection/Configuration.php.twig
+++ b/Skeleton/Api/PresentationBundle/DependencyInjection/Configuration.php.twig
@@ -8,7 +8,8 @@ use Symfony\Component\Config\Definition\ConfigurationInterface;
 /**
  * This is the class that validates and merges configuration from your app/config files
  *
- * To learn more see {@link http://symfony.com/doc/current/cookbook/bundles/extension.html#cookbook-bundles-extension-config-class}
+ * To learn more see
+ * {@link http://symfony.com/doc/current/cookbook/bundles/extension.html#cookbook-bundles-extension-config-class}
  */
 class Configuration implements ConfigurationInterface
 {
@@ -18,11 +19,10 @@ class Configuration implements ConfigurationInterface
     public function getConfigTreeBuilder()
     {
         $treeBuilder = new TreeBuilder();
-        $rootNode = $treeBuilder->root('{{ projectName|lower }}_presentation');
+        $treeBuilder->root('{{ projectName|lower }}_presentation');
 
-        // Here you should define the parameters that are allowed to
-        // configure your bundle. See the documentation linked above for
-        // more information on that topic.
+        // Here you should define the parameters that are allowed to configure your bundle. See the documentation linked
+        // above for more information on that topic.
 
         return $treeBuilder;
     }
