--- a/Skeleton/Api/PresentationBundle/DependencyInjection/PresentationBundleExtension.php.twig
+++ b/Skeleton/Api/PresentationBundle/DependencyInjection/PresentationBundleExtension.php.twig
@@ -12,6 +12,10 @@ use {{ projectName }}\PresentationBundle\DependencyInjection\Configuration;
  * This is the class that loads and manages your bundle configuration
  *
  * To learn more see {@link http://symfony.com/doc/current/cookbook/bundles/extension.html}
+ *
+ * @category {{ projectName }}
+ * @package PresentationBundle
+ * @subpackage DependencyInjection
  */
 class {{ projectName }}PresentationBundleExtension extends Extension
 {
@@ -21,12 +25,11 @@ class {{ projectName }}PresentationBundleExtension extends Extension
     public function load(array $configs, ContainerBuilder $container)
     {
         $configuration = new Configuration();
-        $config = $this->processConfiguration($configuration, $configs);
+        $this->processConfiguration($configuration, $configs);
 
+        $loader = new Loader\YamlFileLoader($container, new FileLocator(__DIR__ . '/../Resources/config/application'));
 {% for entity_name,Vo in entities %}
-        $loader = new Loader\YamlFileLoader($container, new FileLocator($container->getParameter('kernel.root_dir') . '/../src/{{ projectName }}/PresentationBundle/Resources/config/application'));
         $loader->load('{{ entity_name|lower }}.yml');
-
 {% endfor %}
 
         $loader = new Loader\YamlFileLoader($container, new FileLocator(__DIR__ . '/../Resources/config'));
