--- a/Skeleton/Api/InfrastructureBundle/DependencyInjection/InfrastructureBundleExtension.php.twig
+++ b/Skeleton/Api/InfrastructureBundle/DependencyInjection/InfrastructureBundleExtension.php.twig
@@ -23,6 +23,7 @@ class {{projectName}}InfrastructureBundleExtension extends Extension
         $config = $this->processConfiguration($configuration, $configs);
 
         $container->setParameter('database_type', $config['database_type']);
+        $container->setParameter('database_multitenant_path_file', $config['database_multitenant_path_file']);
 
         $loader = new Loader\YamlFileLoader($container, new FileLocator(__DIR__.'/../Resources/config/application'));
         /*
