--- a/Skeleton/Api/InfrastructureBundle/InfrastructureBundle.php.twig
+++ b/Skeleton/Api/InfrastructureBundle/InfrastructureBundle.php.twig
@@ -2,9 +2,9 @@
 
 namespace {{ projectName }}\InfrastructureBundle;
 
-use Sfynx\DddBundle\Layer\Infrastructure\Bundle\Traits\TraitLoadBundle;
 use {{ projectName }}\InfrastructureBundle\DependencyInjection\{{ projectName }}InfrastructureBundleExtension;
 use {{ projectName }}\InfrastructureBundle\DependencyInjection\Compiler\CreateRepositoryFactoryPass;
+use Sfynx\DddBundle\Layer\Infrastructure\Persistence\Generalisation\MultipleDatabase;
 
 use Symfony\Component\HttpKernel\Bundle\Bundle;
 use Symfony\Component\DependencyInjection\ContainerBuilder;
@@ -15,25 +15,36 @@ use Doctrine\ODM\CouchDB\Types as CouchDB;
 
 class {{ projectName }}InfrastructureBundle extends Bundle
 {
-    use TraitLoadBundle;
-
     public function getContainerExtension()
     {
         return new {{ projectName }}InfrastructureBundleExtension();
     }
 
+
     public function boot()
     {
-        $this->loadBoot($this->container);
+        $dbDriver = $this->container->getParameter('database.driver');
+
+        if (MultipleDatabase::ORM_DATABASE_TYPE === $dbDriver) {
+            $this->loadOrmTypes();
+        }
+
+        if (MultipleDatabase::ODM_DATABASE_TYPE === $dbDriver) {
+            $this->loadOdmTypes();
+        }
+
+        if (MultipleDatabase::COUCHDB_DATABASE_TYPE === $dbDriver) {
+            $this->loadCouchDBTypes();
+        }
     }
 
     public function build(ContainerBuilder $container)
     {
         parent::build($container);
 
-        $this->loadCompilerPass($container);
         $container->addCompilerPass(new CreateRepositoryFactoryPass());
     }
+
 
     protected function loadOrmTypes()
     {
